# ma3Renderer

./: CMakeLists.txt  README.md  main.cpp
accelerators/: Aggregrate.cpp  Aggregrate.hpp
brdf/: LambertianReflection.cpp  LambertianReflection.hpp
bsdf/: BSDF.cpp  BSDF.hpp
cameras/: PerspectiveCamera.cpp  PerspectiveCamera.hpp  ProjectiveCamera.cpp  ProjectiveCamera.hpp
core/: BxDF.cpp  BxDF.hpp  Camera.cpp  Camera.hpp  CoefficientSpectrum.cpp  CoefficientSpectrum.hpp  Film.cpp  Film.hpp  GeometricPrimitive.cpp  GeometricPrimitive.hpp  Geometry.cpp  Geometry.hpp  Integrator.cpp  Integrator.hpp  Interaction.cpp  Interaction.hpp  Material.cpp  Material.hpp  Primitive.cpp  Primitive.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Spectrum.cpp  Spectrum.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  geometry.hpp  interaction.cpp  interaction.hpp  ray.cpp  ray.hpp  shape.cpp  shape.hpp
integrators/: SamplerIntegrator.cpp  SamplerIntegrator.hpp
materials/: Dielectric.cpp  Dielectric.hpp  MatteMaterial.cpp  MatteMaterial.hpp  Metal.cpp  Metal.hpp
shapes/: Sphere.cpp  Sphere.hpp
spectrum/: CoefficientSpectrum.hpp  RGBSpectrum.cpp  RGBSpectrum.hpp
textures/: ConstantTexture.cpp  ConstantTexture.hpp
utility/: MA_utility.cpp  MA_utility.hpp  maUtility.hpp
visualization/: MA_window.cpp  MA_window.hpp  ma_window.cpp  ma_window.hpp
